uses env to validate the secrets available

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -12,7 +12,8 @@ jobs:
 
       - name: Setup AWS credentials
         run: |
-          echo ${{ secrets.DEVELOP_AWS_ACCESS_KEY_ID }}
+          echo Available secrets
+          env
           aws configure set aws_access_key_id ${{ secrets.DEVELOP_AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.DEVELOP_AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region us-west-1
