--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -11,8 +11,10 @@ jobs:
         uses: actions/checkout@v3.5.3
 
       - name: Setup AWS credentials
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          echo Available secrets
           env
           aws configure set aws_access_key_id ${{ secrets.DEVELOP_AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.DEVELOP_AWS_SECRET_ACCESS_KEY }}
