--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   setup_aws_credentials:
     runs-on: ubuntu-latest
+    environment:
+      name: develop
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
