uses env variables to pass secrets to ther aws configure command

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -17,9 +17,8 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          env
-          aws configure set aws_access_key_id ${{ secrets.DEVELOP_AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.DEVELOP_AWS_SECRET_ACCESS_KEY }}
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID}
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY}
           aws configure set default.region us-west-1
 
       - name: Create the role for the trust policy
