--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -20,8 +20,9 @@ jobs:
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID}
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY}
           aws configure set default.region us-west-1
-          cat $HOME/.aws/credentials
 
       - name: Create the role for the trust policy
-        run: aws iam create-role --role-name cv-eks-cluster-role --assume-role-policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-trust-policy.json
+        run: |
+          cat $HOME/.aws/credentials
+          aws iam create-role --role-name cv-eks-cluster-role --assume-role-policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-trust-policy.json
       
