adds region to the command and validates the creds to execute commands

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -23,6 +23,6 @@ jobs:
 
       - name: Create the role for the trust policy
         run: |
-          cat $HOME/.aws/credentials
-          aws iam create-role --role-name cv-eks-cluster-role --assume-role-policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-trust-policy.json
+          aws sts get-caller-identity
+          aws iam create-role --role-name cv-eks-cluster-role --assume-role-policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-trust-policy.json --region us-west-1
       
