--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -12,6 +12,11 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
+      - name: Setup the runner
+        run: |
+          sudo apt update -y
+          sudo apt install -y jq
+
       - name: Checkout code
         uses: actions/checkout@v3.5.3
 
@@ -27,4 +32,4 @@ jobs:
 
       - name: Attaches the policy to the new role
         run: |
-          aws iam put-role-policy --role-name eks-cluster-role --policy-name eks-cluster-policy --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-policy.json
+          aws iam put-role-policy --role-name cv-eks-cluster-role --policy-name eks-cluster-policy --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-policy.json
