--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v3.5.3
 
       - name: Setups the runner
-        run: ./scripts/pepe.sh
+        run: ./scripts/eksctl-install.sh
 
       - name: Setup AWS credentials
         run: |
