--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -11,6 +11,8 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
       CLUSTER_ROLE_NAME: cv-eks-cluster-role
       CLUSTER_POLICY_NAME: cv-eks-cluster-policy
       NODEGROUP_ROLE_NAME: cv-eks-nodegroup-role
@@ -19,8 +21,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
 
-      - name: Setups the runner
+      - name: Setup the runner
         run: sh $GITHUB_WORKSPACE/.github/scripts/eksctl-install.sh
+
+      - name: Setup the keys used to create the k8s cluster
+        run: |
+          echo $SSH_PRIVATE_KEY > $HOME/.ssh/k8s
+          echo $SSH_PUBLIC_KEY > $HOME/.ssh/k8s.pub
 
       - name: Setup AWS credentials
         run: |
