encrypts kubeconfig file to use in the develop workflow and have access to the eks k8s cluster. It uses gpg keys that were generated somewhere else and uploaded as secrets in the repo. It also updates the README describing the instructions to generate the gpg key set

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -51,12 +51,16 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
 
       - name: Setup the runner
-        run: sh $GITHUB_WORKSPACE/.github/scripts/eksctl-install.sh
+        run: |
+          sh $GITHUB_WORKSPACE/.github/scripts/eksctl-install.sh
+          sh $GITHUB_WORKSPACE/.github/scripts/gpg-install.sh
 
       - name: Setup the keys used to create the k8s cluster
         run: |
@@ -64,6 +68,17 @@ jobs:
           echo $SSH_PRIVATE_KEY > $HOME/.ssh/k8s
           echo $SSH_PUBLIC_KEY > $HOME/.ssh/k8s.pub
 
+      - name: Import the gpg keys
+        run: echo $GPG_PRIVATE_KEY | gpg --import
+
       - name: Creates the k8s cluster using eksctl
-        run: |
-          eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
+        run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
+
+      - name: Encrypts the kubeconfig file
+        run: gpg --recipient $RECIPIENT_EMAIL --encrypt $HOME/.kube/config
+
+      - name: Pushes kubeconfig artifact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: kube_config.gpg
+          path: $GITHUB_WORKSPACE/config.gpg
