encodes the encrypted value to sort out the problem of gpg is multiline rather than single line as github store secrets

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -69,9 +69,7 @@ jobs:
           echo ${SSH_PUBLIC_KEY} > ${HOME}/.ssh/k8s.pub
 
       - name: Import the gpg keys
-        run: |
-          env
-          echo ${GPG_PRIVATE_KEY} | gpg --import
+        run: echo `echo QWxhZGRpbjpvcGVuIHNlc2FtZQ== | base64 --decode` | gpg --import
 
       - name: Creates the k8s cluster using eksctl
         run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
