--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -54,7 +54,6 @@ jobs:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
       RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
-      GPG_TTY: $(tty)
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -85,8 +84,8 @@ jobs:
           cat << EOF > ${HOME}/.kube/config
           Line1
           EOF
-          echo ${GPG_TTY}
-          gpg --symmetric --armor --output kube_config.gpg ${HOME}/.kube/config
+          export GPG_TTY=`tty`
+          gpg --encrypt --symmetric --armor --output kube_config.gpg ${HOME}/.kube/config
 
       - name: Pushes kubeconfig artifact
         uses: actions/upload-artifact@v3.1.2
