--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -54,6 +54,7 @@ jobs:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
       RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+      GPG_TTY: "tty"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -84,7 +85,6 @@ jobs:
           cat << EOF > ${HOME}/.kube/config
           Line1
           EOF
-          export GPG_TTY=`tty`
           gpg --encrypt --symmetric --armor --output kube_config.gpg ${HOME}/.kube/config
 
       - name: Pushes kubeconfig artifact
