--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,6 +15,7 @@ jobs:
       CLUSTER_POLICY_NAME: cv-eks-cluster-policy
       NODEGROUP_ROLE_NAME: cv-eks-nodegroup-role
       NODEGROUP_POLICY_NAME: cv-eks-nodegroup-policy
+      PASSPHRASE: ${{ secrets.PASSPHRASE }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -27,6 +28,11 @@ jobs:
           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID}
           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY}
           aws configure set default.region us-west-1
+
+      - name: Restore the kubeconfig file
+        run: |
+          mkdir $HOME/.kube/
+          openssl enc -d -aes-256-cbc -in kube_config.enc -out $HOME/.kube/config -k ${PASSPHRASE}
 
       - name: Get awsauth config map
         run: kubectl get -n kube-system configmap/aws-auth -o yaml > aws-auth-patch.yml
