--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -38,6 +38,7 @@ jobs:
         run: aws iam put-role-policy --role-name ${NODEGROUP_ROLE_NAME} --policy-name ${NODEGROUP_POLICY_NAME} --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-nodegroup-policy.json
 
   create_the_cluster:
+    if: false
     runs-on: ubuntu-latest
     needs: setup_roles_and_policies
     environment:
