--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -2,7 +2,7 @@ name: Create AWS infrastructure
 on:
   push:
     branches:
-      - infrastructure
+      - master
 jobs:
   setup_roles_and_policies:
     runs-on: ubuntu-latest
