--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -29,16 +29,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Generate KMS key
+      - name: Generate KMS key and save the KVM key in GH secrets
         run: |
-          key_id=$(aws kms create-key --query KeyMetadata.KeyId --output text)
-          echo "::set-output name=kms_key_id::$key_id"
-          key_arn=$(aws kms describe-key --key-id $key_id --query KeyMetadata.Arn --output text)
-          echo "::set-output name=kms_key_arn::$key_arn"
+          KVM_KEY_ID=$(aws kms create-key --query KeyMetadata.KeyId --output text)
+          KVM_KEY_ARN=$(aws kms describe-key --key-id $KVM_KEY_ID --query KeyMetadata.Arn --output text)
 
-      - name: Save the KVM key in GH secrets
-        run: |
-          echo "::add-mask::$kms_key_arn"
-          echo "::set-env name=KMS_KEY_ARN::$kms_key_arn"
-          echo "KMS_KEY_ARN=$kms_key_arn" >> $GITHUB_ENV
-          echo "::set-output name=kms_key_arn::$kms_key_arn"
+      - name: Shows the ARN just created
+        run: echo $KVM_KEY_ARN
