--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -21,6 +21,7 @@ jobs:
         CODEPIPELINE_POLICY_NAME: cv-codepipeline-policy
         CODEBUILD_ROLE_NAME: cv-codebuild-role
         CODEBUILD_POLICY_NAME: cv-codebuild-policy
+        KVM_KEY_ARN: my-key-arn
     steps:
       - name: Configurar AWS CLI
         uses: aws-actions/configure-aws-credentials@v1
@@ -32,7 +33,9 @@ jobs:
       - name: Generate KMS key and save the KVM key in GH secrets
         run: |
           KVM_KEY_ID=$(aws kms create-key --query KeyMetadata.KeyId --output text)
+          echo `KVM_KEY_ID = ${KVM_KEY_ID}`
           KVM_KEY_ARN=$(aws kms describe-key --key-id $KVM_KEY_ID --query KeyMetadata.Arn --output text)
+          echo `KVM_KEY_ARN = ${KVM_KEY_ARN}`
 
       - name: Shows the ARN just created
         run: echo $KVM_KEY_ARN
