--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Generate KMS key and save the KVM key in GH secrets
         run: |
           KVM_KEY_ID=$(aws kms create-key --query KeyMetadata.KeyId --output text)
-          echo `KVM_KEY_ID = ${KVM_KEY_ID}`
+          echo ${KVM_KEY_ID}
           KVM_KEY_ARN=$(aws kms describe-key --key-id $KVM_KEY_ID --query KeyMetadata.Arn --output text)
-          echo `KVM_KEY_ARN = ${KVM_KEY_ARN}`
+          echo ${KVM_KEY_ARN}
 
       - name: Shows the ARN just created
         run: echo $KVM_KEY_ARN
