tries gpg to encrypt the files using these strategies: import the trust-owners first, then import the gpg private jey without the passphrase, encrypt the file given the email of the recipient -hardcoded- fpr a test and skips another steps

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -57,7 +57,7 @@ jobs:
   create_the_cluster:
     if: false
     runs-on: ubuntu-latest
-    needs: setup_roles_and_policies
+    # needs: setup_roles_and_policies
     environment:
       name: develop
     env:
