--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -56,7 +56,7 @@ jobs:
 
   create_the_cluster:
     runs-on: ubuntu-latest
-    needs: setup_roles_and_policies
+    # needs: setup_roles_and_policies
     environment:
       name: develop
     env:
