--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -88,7 +88,8 @@ jobs:
       
       - name: Import the gpg components
         run: |
-          echo ${GPG_TRUST_OWNERS} | base64 --decode | gpg --import-ownertrust
+          echo ${GPG_TRUST_OWNERS} | base64 --decode > trust-file
+          gpg --import-ownertrust < trust-file
           echo ${GPG_PUBLIC_KEY}  | base64 --decode | gpg --import
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
           
