--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -104,7 +104,7 @@ jobs:
           Line1
           EOF
           # gpg --batch --symmetric --output kube_config.gpg ${HOME}/.kube/config
-          gpg --encrypt --sign --armor -r runner@mygithub.com --output kube_config.gpg ${HOME}/.kube/config
+          gpg --encrypt -r runner@mygithub.com --output kube_config.gpg ${HOME}/.kube/config
 
       - name: Encrypts the kubeconfig file
         if: false
